fix overflow on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -13,4 +13,5 @@
 
 body{
   font-family: 'Open Sans', sans-serif;
+  overflow-x: hidden;
 }
